tests/preproc/define/fail004.ds
#define SUM(a, b) ((a) + (b))

const a = SUM